[package]
name = "booru-db"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2.0"
fxhash = "0.2.1"
rand = "0.8.5"

[dev-dependencies]
sqlx = { version = "0.7.2", features = [ "postgres", "runtime-tokio" ] }
tokio = { version = "1.0", features = [ "macros", "rt-multi-thread" ] }
